[project]
name = "uv-lock-check"
version = "0.1.0"
description = "A pre-commit hook to validate pyproject.toml and uv.lock files are in sync"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # Earliest version with Python 3.14 (current latest minor) support
    "uv>=0.9.0",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"
